# grafana-stack-templates

./: .env.example  .gitignore  .manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  relay.manifest.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  module_request.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEBUG.md  MANUAL_INSTALL.md  MODULES.md  QUICKSTART.md  RECIPES.md  SAMPLE_OUTPUT.md
examples/: encryptly-services.yaml  services.yaml
modules/alert-rules/sm-http-healthcheck/: README.md  meta.yaml  rule.yaml
modules/dashboards/synthetic-monitoring-overview/: README.md  dashboard.json  meta.yaml
modules/recipes/synthetic-monitoring-pack/: README.md  recipe.yaml
modules/slack-templates/app-status-compact/: README.md  meta.yaml  template.tpl
modules/slack-templates/app-status-detailed/: README.md  meta.yaml  template.tpl
modules/slack-templates/app-status-rich/: README.md  meta.yaml  template.tpl
modules/sm-checks/http-healthz/: README.md  check.yaml  meta.yaml
src/grafana_stack_templates/: __init__.py  catalog.py  cli.py  clients.py  manifest.py
src/grafana_stack_templates/installers/: __init__.py  _render.py  alert_rule.py  dashboard.py  recipe.py  slack_template.py  sm_check.py
tests/: conftest.py  test_catalog.py  test_manifest.py  test_render.py  test_repo_hygiene.py
